[gd_scene load_steps=102 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Resources/Other/PICK.png" type="Texture" id=2]
[ext_resource path="res://Resources/Other/CRACK.png" type="Texture" id=3]
[ext_resource path="res://Resources/Other/GRAB.png" type="Texture" id=4]
[ext_resource path="res://Resources/Other/Progress/ProgressBG1.png" type="Texture" id=5]
[ext_resource path="res://Resources/Other/Progress/ProgressBG2.png" type="Texture" id=6]
[ext_resource path="res://Resources/Other/Progress/ProgressBG3.png" type="Texture" id=7]
[ext_resource path="res://Resources/Other/Progress/ProgressBG4.png" type="Texture" id=8]
[ext_resource path="res://Resources/Other/Progress/ProgressBG5.png" type="Texture" id=9]
[ext_resource path="res://Resources/Other/Progress/ProgressBG6.png" type="Texture" id=10]
[ext_resource path="res://Resources/Other/Progress/ProgressBG7.png" type="Texture" id=11]
[ext_resource path="res://Resources/Player/T_Shadow/PlayerShadow1.png" type="Texture" id=12]
[ext_resource path="res://Resources/Player/T_Shadow/PlayerShadow2.png" type="Texture" id=13]
[ext_resource path="res://Resources/Player/T_Shadow/PlayerShadow3.png" type="Texture" id=14]
[ext_resource path="res://Resources/Player/T_Shadow/PlayerShadow4.png" type="Texture" id=15]
[ext_resource path="res://Resources/Player/T_Shadow/PlayerShadow5.png" type="Texture" id=16]
[ext_resource path="res://Resources/Player/T_Shadow/PlayerShadow6.png" type="Texture" id=17]
[ext_resource path="res://Resources/Player/T_Shadow/PlayerShadow7.png" type="Texture" id=18]
[ext_resource path="res://Resources/Player/T_Shadow/PlayerShadow8.png" type="Texture" id=19]
[ext_resource path="res://Resources/Player/P_MoveRight/PlayerMoveRight1.png" type="Texture" id=20]
[ext_resource path="res://Resources/Player/T_GrabRight/TDPlayerGrabRight1.png" type="Texture" id=21]
[ext_resource path="res://Resources/Player/T_GrabRight/TDPlayerGrabRight2.png" type="Texture" id=22]
[ext_resource path="res://Resources/Player/T_GrabRight/TDPlayerGrabRight3.png" type="Texture" id=23]
[ext_resource path="res://Resources/Player/T_GrabRight/TDPlayerGrabRight4.png" type="Texture" id=24]
[ext_resource path="res://Resources/Player/P_JumpRight/PlayerJumpRight.png" type="Texture" id=25]
[ext_resource path="res://Resources/Player/P_FallLeft/PlayerFallLeft.png" type="Texture" id=26]
[ext_resource path="res://Resources/Player/P_MoveRight/PlayerMoveRight2.png" type="Texture" id=27]
[ext_resource path="res://Resources/Player/P_MoveRight/PlayerMoveRight3.png" type="Texture" id=28]
[ext_resource path="res://Resources/Player/P_MoveRight/PlayerMoveRight4.png" type="Texture" id=29]
[ext_resource path="res://Resources/Player/P_MoveRight/PlayerMoveRight5.png" type="Texture" id=30]
[ext_resource path="res://Resources/Player/P_MoveRight/PlayerMoveRight6.png" type="Texture" id=31]
[ext_resource path="res://Resources/Player/P_MoveRight/PlayerMoveRight7.png" type="Texture" id=32]
[ext_resource path="res://Resources/Player/P_MoveRight/PlayerMoveRight8.png" type="Texture" id=33]
[ext_resource path="res://Resources/Player/T_MoveDown/TDPlayerMoveDown1.png" type="Texture" id=34]
[ext_resource path="res://Resources/Player/T_MoveDown/TDPlayerMoveDown2.png" type="Texture" id=35]
[ext_resource path="res://Resources/Player/T_MoveDown/TDPlayerMoveDown3.png" type="Texture" id=36]
[ext_resource path="res://Resources/Player/T_MoveDown/TDPlayerMoveDown4.png" type="Texture" id=37]
[ext_resource path="res://Resources/Player/T_MoveDown/TDPlayerMoveDown5.png" type="Texture" id=38]
[ext_resource path="res://Resources/Player/T_MoveDown/TDPlayerMoveDown6.png" type="Texture" id=39]
[ext_resource path="res://Resources/Player/T_MoveDown/TDPlayerMoveDown7.png" type="Texture" id=40]
[ext_resource path="res://Resources/Player/T_MoveDown/TDPlayerMoveDown8.png" type="Texture" id=41]
[ext_resource path="res://Resources/Player/T_GrabDown/TDPlayerGrabDown1.png" type="Texture" id=42]
[ext_resource path="res://Resources/Player/T_GrabDown/TDPlayerGrabDown2.png" type="Texture" id=43]
[ext_resource path="res://Resources/Player/T_GrabDown/TDPlayerGrabDown3.png" type="Texture" id=44]
[ext_resource path="res://Resources/Player/T_GrabDown/TDPlayerGrabDown4.png" type="Texture" id=45]
[ext_resource path="res://Resources/Player/P_JumpLeft/PlayerJumpLeft.png" type="Texture" id=46]
[ext_resource path="res://Resources/Player/T_MoveRight/TDPlayerMoveRight1.png" type="Texture" id=47]
[ext_resource path="res://Resources/Player/P_MoveLeft/PlayerMoveLeft1.png" type="Texture" id=48]
[ext_resource path="res://Resources/Player/P_MoveLeft/PlayerMoveLeft2.png" type="Texture" id=49]
[ext_resource path="res://Resources/Player/P_MoveLeft/PlayerMoveLeft3.png" type="Texture" id=50]
[ext_resource path="res://Resources/Player/P_MoveLeft/PlayerMoveLeft4.png" type="Texture" id=51]
[ext_resource path="res://Resources/Player/P_MoveLeft/PlayerMoveLeft5.png" type="Texture" id=52]
[ext_resource path="res://Resources/Player/P_MoveLeft/PlayerMoveLeft6.png" type="Texture" id=53]
[ext_resource path="res://Resources/Player/P_MoveLeft/PlayerMoveLeft7.png" type="Texture" id=54]
[ext_resource path="res://Resources/Player/P_MoveLeft/PlayerMoveLeft8.png" type="Texture" id=55]
[ext_resource path="res://Resources/Player/P_FallRight/PlayerFallRight.png" type="Texture" id=56]
[ext_resource path="res://Resources/Player/T_MoveUp/TDPlayerMoveUp1.png" type="Texture" id=57]
[ext_resource path="res://Resources/Player/T_MoveUp/TDPlayerMoveUp2.png" type="Texture" id=58]
[ext_resource path="res://Resources/Player/T_MoveUp/TDPlayerMoveUp3.png" type="Texture" id=59]
[ext_resource path="res://Resources/Player/T_MoveUp/TDPlayerMoveUp4.png" type="Texture" id=60]
[ext_resource path="res://Resources/Player/T_MoveUp/TDPlayerMoveUp5.png" type="Texture" id=61]
[ext_resource path="res://Resources/Player/T_MoveUp/TDPlayerMoveUp6.png" type="Texture" id=62]
[ext_resource path="res://Resources/Player/T_MoveUp/TDPlayerMoveUp7.png" type="Texture" id=63]
[ext_resource path="res://Resources/Player/T_MoveUp/TDPlayerMoveUp8.png" type="Texture" id=64]
[ext_resource path="res://Resources/Player/T_MoveLeft/TDPlayerMoveLeft1.png" type="Texture" id=65]
[ext_resource path="res://Resources/Player/T_MoveLeft/TDPlayerMoveLeft2.png" type="Texture" id=66]
[ext_resource path="res://Resources/Player/T_MoveLeft/TDPlayerMoveLeft3.png" type="Texture" id=67]
[ext_resource path="res://Resources/Player/T_MoveLeft/TDPlayerMoveLeft4.png" type="Texture" id=68]
[ext_resource path="res://Resources/Player/T_MoveLeft/TDPlayerMoveLeft5.png" type="Texture" id=69]
[ext_resource path="res://Resources/Player/T_MoveLeft/TDPlayerMoveLeft6.png" type="Texture" id=70]
[ext_resource path="res://Resources/Player/T_MoveLeft/TDPlayerMoveLeft7.png" type="Texture" id=71]
[ext_resource path="res://Resources/Player/T_MoveLeft/TDPlayerMoveLeft8.png" type="Texture" id=72]
[ext_resource path="res://Resources/Player/T_MoveRight/TDPlayerMoveRight2.png" type="Texture" id=73]
[ext_resource path="res://Resources/Player/T_MoveRight/TDPlayerMoveRight3.png" type="Texture" id=74]
[ext_resource path="res://Resources/Player/T_MoveRight/TDPlayerMoveRight4.png" type="Texture" id=75]
[ext_resource path="res://Resources/Player/T_MoveRight/TDPlayerMoveRight5.png" type="Texture" id=76]
[ext_resource path="res://Resources/Player/T_MoveRight/TDPlayerMoveRight6.png" type="Texture" id=77]
[ext_resource path="res://Resources/Player/T_MoveRight/TDPlayerMoveRight7.png" type="Texture" id=78]
[ext_resource path="res://Resources/Player/T_MoveRight/TDPlayerMoveRight8.png" type="Texture" id=79]
[ext_resource path="res://Resources/Player/T_GrabLeft/TDPlayerGrabLeft1.png" type="Texture" id=80]
[ext_resource path="res://Resources/Player/T_GrabLeft/TDPlayerGrabLeft2.png" type="Texture" id=81]
[ext_resource path="res://Resources/Player/T_GrabLeft/TDPlayerGrabLeft3.png" type="Texture" id=82]
[ext_resource path="res://Resources/Player/T_GrabLeft/TDPlayerGrabLeft4.png" type="Texture" id=83]
[ext_resource path="res://Resources/Player/T_GrabUp/TDPlayerGrabUp1.png" type="Texture" id=84]
[ext_resource path="res://Resources/Player/T_GrabUp/TDPlayerGrabUp2.png" type="Texture" id=85]
[ext_resource path="res://Resources/Player/T_GrabUp/TDPlayerGrabUp3.png" type="Texture" id=86]
[ext_resource path="res://Resources/Player/T_GrabUp/TDPlayerGrabUp4.png" type="Texture" id=87]
[ext_resource path="res://Camera2D.gd" type="Script" id=88]
[ext_resource path="res://Resources/Sounds/footstep09.ogg" type="AudioStream" id=89]
[ext_resource path="res://Resources/Sounds/metalLatch.ogg" type="AudioStream" id=90]
[ext_resource path="res://Resources/Sounds/footstep01.ogg" type="AudioStream" id=91]
[ext_resource path="res://Resources/Sounds/drawKnife2.ogg" type="AudioStream" id=92]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "PICK",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "CRACK",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "GRAB",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "PROGRESS",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Grab",
"speed": 8.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "P_IdleRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "T_GrabRight",
"speed": 8.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "P_JumpRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "P_FallLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "P_MoveRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "T_MoveDown",
"speed": 10.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ) ],
"loop": true,
"name": "T_GrabDown",
"speed": 8.0
}, {
"frames": [ ExtResource( 46 ) ],
"loop": true,
"name": "P_JumpLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 47 ) ],
"loop": true,
"name": "T_IdleRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ) ],
"loop": true,
"name": "P_MoveLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 56 ) ],
"loop": true,
"name": "P_FallRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 57 ) ],
"loop": true,
"name": "T_IdleUp",
"speed": 10.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ) ],
"loop": true,
"name": "T_MoveUp",
"speed": 10.0
}, {
"frames": [ ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ) ],
"loop": true,
"name": "T_MoveLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "T_IdleDown",
"speed": 10.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ) ],
"loop": true,
"name": "T_MoveRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "P_IdleLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ) ],
"loop": true,
"name": "T_GrabLeft",
"speed": 8.0
}, {
"frames": [ ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ) ],
"loop": true,
"name": "T_GrabUp",
"speed": 8.0
}, {
"frames": [ ExtResource( 65 ) ],
"loop": true,
"name": "T_IdleLeft",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 14 )

[sub_resource type="Animation" id=6]
resource_name = "ChangeGenre"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("../AudioChangeGenre")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "GrabMove"
length = 0.1
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath("../AudioGrabMove")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("../AudioLand")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
"heavy",
]]
script = ExtResource( 1 )

[node name="Hint" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -24 )
frames = SubResource( 1 )
animation = "CRACK"

[node name="AnimatedShadow" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idle"
playing = true

[node name="PlayerAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "T_MoveRight"
frame = 6
playing = true

[node name="T_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 4 )

[node name="P_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 5 )
disabled = true

[node name="GrabDetect" type="RayCast2D" parent="."]
self_modulate = Color( 0.968627, 1, 0, 1 )
position = Vector2( 0, 10 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 88 )
DESIRED_RESOLUTION = Vector2( 1280, 800 )

[node name="SoundAnim" type="AnimationPlayer" parent="."]
root_node = NodePath("../AudioFootstep")
playback_speed = 2.0
anims/ChangeGenre = SubResource( 6 )
anims/Footstep = SubResource( 7 )
anims/GrabMove = SubResource( 8 )
anims/Land = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AudioFootstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 89 )

[node name="AudioChangeGenre" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 90 )

[node name="AudioLand" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 91 )

[node name="AudioGrabMove" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 92 )
volume_db = 24.0
[connection signal="animation_finished" from="Hint" to="." method="_on_Hint_animation_finished"]
[connection signal="animation_finished" from="SoundAnim" to="." method="_on_SoundAnim_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
